@startuml
class Usuario {
    +nome: string
    +email: string
    +telefone: string
    +senha: string
    +tipo_perfil: string
    +data_cadastro: datetime
}

class Salao {
    usuario: Usuario
}

class Cliente {
    usuario: Usuario
}

class Profissional {
    +nome: string
    +salao: Salao
}

class Servico {
    +nome: string
    +descricao: string
    +preco: decimal
    +duracao_minutos: int
}

class Agendamento {
    +cliente: Cliente
    +profissional: Profissional
    +servico: Servico
    +data_agendada: date
    +hora_inicio: time
    +hora_fim: time
    +status: string
    +data_criacao: datetime
    +data_cancelamento: datetime
}

' --- Associações ---
Usuario "1" -- "0...*" Cliente : >
Usuario "1" -- "0...*" Salao : >
Salao "1" -- "0...*" Profissional
Salao "1" -- "0...*" Servico : cadastra >
Profissional "0...*" -- "0...*" Servico : >
Profissional "1" -- "0...*" Agendamento : atende >
Cliente "1" -- "0...*" Agendamento : realiza >
Servico "1" -- "0...*" Agendamento : possui >
@enduml